@@ -1,3 +1,8 @@
+Mon Jul 05 14:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * bin/PerlACE/Process_Unix.pm:
+          Fixes problem with killall() function being not selective enough.
+
 Mon Jul  5 13:56:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * etc/ace.doxygen:
